--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,40 +13,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "tensor([0, 1, 2])"
+       "(tensor([0, 1, 2]), torch.Size([3]))"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "input = torch.tensor([0,1,2])\n",
-    "input"
+    "input,input.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#lkkkk"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.8202,  0.8283,  0.2457,  1.1370],\n",
-       "         [ 0.1938, -2.9892,  0.5100, -0.1527],\n",
-       "         [ 0.0823,  1.3379,  0.5307,  0.5900]], grad_fn=<EmbeddingBackward0>),\n",
+       "(tensor([[-1.8719,  0.4048, -1.4430,  0.2267],\n",
+       "         [ 0.9684,  0.0665, -0.1522, -0.6881],\n",
+       "         [-0.1073, -0.5513, -1.7242,  0.9203]], grad_fn=<EmbeddingBackward0>),\n",
        " torch.Size([3, 4]))"
       ]
      },
-     "execution_count": 152,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,18 +95,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([[1.7329, 1.6018, 1.7664]], grad_fn=<MmBackward0>),\n",
-       " tensor([[-1.9438, -0.9838, -1.2064]], grad_fn=<MmBackward0>),\n",
-       " tensor([[1.3765, 1.0368, 1.5225]], grad_fn=<MmBackward0>)]"
+       "[tensor([[-0.8496, -1.2055, -1.9319]], grad_fn=<MmBackward0>),\n",
+       " tensor([[-0.1065,  0.2023,  0.1365]], grad_fn=<MmBackward0>),\n",
+       " tensor([[-0.6184, -0.8655, -0.7872]], grad_fn=<MmBackward0>)]"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,19 +117,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([tensor([[0.9775, 1.6736, 1.0405]], grad_fn=<MmBackward0>),\n",
-       "  tensor([[-0.4639, -1.1571, -0.7377]], grad_fn=<MmBackward0>),\n",
-       "  tensor([[0.6633, 1.3730, 0.5662]], grad_fn=<MmBackward0>)],\n",
+       "([tensor([[-1.5353, -1.0229, -2.5482]], grad_fn=<MmBackward0>),\n",
+       "  tensor([[-0.2971, -0.1036,  0.1708]], grad_fn=<MmBackward0>),\n",
+       "  tensor([[-1.1088, -1.5213, -1.3088]], grad_fn=<MmBackward0>)],\n",
        " torch.Size([1, 3]))"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,18 +140,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([[2.3624, 1.3323, 1.8101]], grad_fn=<MmBackward0>),\n",
-       " tensor([[-2.3875, -1.7549, -2.4495]], grad_fn=<MmBackward0>),\n",
-       " tensor([[2.2111, 1.4592, 1.7035]], grad_fn=<MmBackward0>)]"
+       "[tensor([[-1.6836, -1.0530, -1.5812]], grad_fn=<MmBackward0>),\n",
+       " tensor([[-0.2186, -0.4764, -0.0024]], grad_fn=<MmBackward0>),\n",
+       " tensor([[-0.3542, -0.8676, -1.3166]], grad_fn=<MmBackward0>)]"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
