--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,18 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "import torch \n",
-    "\n"
+    "import torch "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Example sentence: `I love you`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +28,7 @@
        "(tensor([0, 1, 2]), torch.Size([3]))"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,19 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[-1.8719,  0.4048, -1.4430,  0.2267],\n",
-       "         [ 0.9684,  0.0665, -0.1522, -0.6881],\n",
-       "         [-0.1073, -0.5513, -1.7242,  0.9203]], grad_fn=<EmbeddingBackward0>),\n",
+       "(tensor([[ 0.9082, -0.4524, -0.3170, -0.4982],\n",
+       "         [ 1.1384,  0.2863,  1.5047,  0.7825],\n",
+       "         [ 0.4415, -1.3736, -0.4298,  0.0815]], grad_fn=<EmbeddingBackward0>),\n",
        " torch.Size([3, 4]))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,18 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([[-0.8496, -1.2055, -1.9319]], grad_fn=<MmBackward0>),\n",
-       " tensor([[-0.1065,  0.2023,  0.1365]], grad_fn=<MmBackward0>),\n",
-       " tensor([[-0.6184, -0.8655, -0.7872]], grad_fn=<MmBackward0>)]"
+       "[tensor([[ 0.1800, -0.1395,  0.1841]], grad_fn=<MmBackward0>),\n",
+       " tensor([[2.0398, 2.3036, 2.9367]], grad_fn=<MmBackward0>),\n",
+       " tensor([[-0.4120, -0.1387, -0.0024]], grad_fn=<MmBackward0>)]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -108,19 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([tensor([[-1.5353, -1.0229, -2.5482]], grad_fn=<MmBackward0>),\n",
-       "  tensor([[-0.2971, -0.1036,  0.1708]], grad_fn=<MmBackward0>),\n",
-       "  tensor([[-1.1088, -1.5213, -1.3088]], grad_fn=<MmBackward0>)],\n",
+       "([tensor([[-0.6261, -0.4828, -0.4296]], grad_fn=<MmBackward0>),\n",
+       "  tensor([[2.3565, 1.1809, 2.9514]], grad_fn=<MmBackward0>),\n",
+       "  tensor([[-1.1541, -0.9341, -1.1287]], grad_fn=<MmBackward0>)],\n",
        " torch.Size([1, 3]))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,24 +137,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([[-1.6836, -1.0530, -1.5812]], grad_fn=<MmBackward0>),\n",
-       " tensor([[-0.2186, -0.4764, -0.0024]], grad_fn=<MmBackward0>),\n",
-       " tensor([[-0.3542, -0.8676, -1.3166]], grad_fn=<MmBackward0>)]"
+       "[tensor([[-3.3073e-01, -2.2443e-04, -5.9802e-01]], grad_fn=<MmBackward0>),\n",
+       " tensor([[1.1377, 1.4576, 2.3103]], grad_fn=<MmBackward0>),\n",
+       " tensor([[-0.9519, -0.5821, -0.7040]], grad_fn=<MmBackward0>)]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "v_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[tensor([[-0.6261, -0.4828, -0.4296]], grad_fn=<MmBackward0>),\n",
+       " tensor([[2.3565, 1.1809, 2.9514]], grad_fn=<MmBackward0>),\n",
+       " tensor([[-1.1541, -0.9341, -1.1287]], grad_fn=<MmBackward0>)]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "k_vector"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 3])"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "q_vector[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-0.1244596391916275"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.dot(q_vector[0].squeeze(0),k_vector[0].squeeze(0)).item()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-0.6261, -0.4828, -0.4296]], grad_fn=<MmBackward0>)\n",
+      "tensor([[2.3565, 1.1809, 2.9514]], grad_fn=<MmBackward0>)\n",
+      "tensor([[-1.1541, -0.9341, -1.1287]], grad_fn=<MmBackward0>)\n",
+      "tensor([[-0.6261, -0.4828, -0.4296]], grad_fn=<MmBackward0>)\n",
+      "tensor([[2.3565, 1.1809, 2.9514]], grad_fn=<MmBackward0>)\n",
+      "tensor([[-1.1541, -0.9341, -1.1287]], grad_fn=<MmBackward0>)\n",
+      "tensor([[-0.6261, -0.4828, -0.4296]], grad_fn=<MmBackward0>)\n",
+      "tensor([[2.3565, 1.1809, 2.9514]], grad_fn=<MmBackward0>)\n",
+      "tensor([[-1.1541, -0.9341, -1.1287]], grad_fn=<MmBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def calculate_attention(q_vector,k_vector):\n",
+    "    for q in q_vector:\n",
+    "        for k in k_vector:\n",
+    "            print(k)\n",
+    "\n",
+    "calculate_attention(q_vector,k_vector)\n"
    ]
   },
   {
@@ -175,7 +273,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
