--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -28,7 +28,7 @@
        "(tensor([0, 1, 2]), torch.Size([3]))"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,19 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([[ 0.9082, -0.4524, -0.3170, -0.4982],\n",
-       "         [ 1.1384,  0.2863,  1.5047,  0.7825],\n",
-       "         [ 0.4415, -1.3736, -0.4298,  0.0815]], grad_fn=<EmbeddingBackward0>),\n",
+       "(tensor([[-0.5389, -0.1476,  0.0763,  1.2217],\n",
+       "         [-0.8461, -0.1356,  1.5055,  0.2531],\n",
+       "         [-0.6635,  0.4190, -1.3850, -0.0317]], grad_fn=<EmbeddingBackward0>),\n",
        " torch.Size([3, 4]))"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,18 +92,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([[ 0.1800, -0.1395,  0.1841]], grad_fn=<MmBackward0>),\n",
-       " tensor([[2.0398, 2.3036, 2.9367]], grad_fn=<MmBackward0>),\n",
-       " tensor([[-0.4120, -0.1387, -0.0024]], grad_fn=<MmBackward0>)]"
+       "[tensor([[0.2723, 0.2406, 0.7984]], grad_fn=<MmBackward0>),\n",
+       " tensor([[0.2367, 0.7711, 0.9227]], grad_fn=<MmBackward0>),\n",
+       " tensor([[-0.7887, -0.5633, -1.4106]], grad_fn=<MmBackward0>)]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,19 +114,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "([tensor([[-0.6261, -0.4828, -0.4296]], grad_fn=<MmBackward0>),\n",
-       "  tensor([[2.3565, 1.1809, 2.9514]], grad_fn=<MmBackward0>),\n",
-       "  tensor([[-1.1541, -0.9341, -1.1287]], grad_fn=<MmBackward0>)],\n",
+       "([tensor([[1.1163, 0.6530, 0.1827]], grad_fn=<MmBackward0>),\n",
+       "  tensor([[1.0899, 0.0861, 0.9851]], grad_fn=<MmBackward0>),\n",
+       "  tensor([[-0.9386,  0.1854, -0.7626]], grad_fn=<MmBackward0>)],\n",
        " torch.Size([1, 3]))"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -137,18 +137,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([[-3.3073e-01, -2.2443e-04, -5.9802e-01]], grad_fn=<MmBackward0>),\n",
-       " tensor([[1.1377, 1.4576, 2.3103]], grad_fn=<MmBackward0>),\n",
-       " tensor([[-0.9519, -0.5821, -0.7040]], grad_fn=<MmBackward0>)]"
+       "[tensor([[0.7486, 0.7158, 0.7152]], grad_fn=<MmBackward0>),\n",
+       " tensor([[0.2388, 1.0195, 0.2980]], grad_fn=<MmBackward0>),\n",
+       " tensor([[-0.5178, -1.7597, -1.0042]], grad_fn=<MmBackward0>)]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -159,18 +159,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[tensor([[-0.6261, -0.4828, -0.4296]], grad_fn=<MmBackward0>),\n",
-       " tensor([[2.3565, 1.1809, 2.9514]], grad_fn=<MmBackward0>),\n",
-       " tensor([[-1.1541, -0.9341, -1.1287]], grad_fn=<MmBackward0>)]"
+       "[tensor([[1.1163, 0.6530, 0.1827]], grad_fn=<MmBackward0>),\n",
+       " tensor([[1.0899, 0.0861, 0.9851]], grad_fn=<MmBackward0>),\n",
+       " tensor([[-0.9386,  0.1854, -0.7626]], grad_fn=<MmBackward0>)]"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "torch.Size([1, 3])"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,53 +200,93 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Attention --> (I) x(I)  in I love you`"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.1244596391916275"
+       "0.6069552302360535"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "torch.dot(q_vector[0].squeeze(0),k_vector[0].squeeze(0)).item()"
+    "torch.dot(q_vector[0].squeeze(),k_vector[0].squeeze()).item()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "tensor([[-0.6261, -0.4828, -0.4296]], grad_fn=<MmBackward0>)\n",
-      "tensor([[2.3565, 1.1809, 2.9514]], grad_fn=<MmBackward0>)\n",
-      "tensor([[-1.1541, -0.9341, -1.1287]], grad_fn=<MmBackward0>)\n",
-      "tensor([[-0.6261, -0.4828, -0.4296]], grad_fn=<MmBackward0>)\n",
-      "tensor([[2.3565, 1.1809, 2.9514]], grad_fn=<MmBackward0>)\n",
-      "tensor([[-1.1541, -0.9341, -1.1287]], grad_fn=<MmBackward0>)\n",
-      "tensor([[-0.6261, -0.4828, -0.4296]], grad_fn=<MmBackward0>)\n",
-      "tensor([[2.3565, 1.1809, 2.9514]], grad_fn=<MmBackward0>)\n",
-      "tensor([[-1.1541, -0.9341, -1.1287]], grad_fn=<MmBackward0>)\n"
-     ]
+     "data": {
+      "text/plain": [
+       "tensor([[0.2723, 0.2406, 0.7984]], grad_fn=<MmBackward0>)"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "q_vector[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "attention_scores=[]\n",
+    "attention_scores.clear()\n",
     "def calculate_attention(q_vector,k_vector):\n",
     "    for q in q_vector:\n",
+    "        word_score=[]\n",
     "        for k in k_vector:\n",
-    "            print(k)\n",
+    "            score = torch.dot(q.squeeze(),k.squeeze()).item()\n",
+    "            word_score.append(score)\n",
     "\n",
+    "        attention_scores.append(word_score.copy())\n",
+    "       \n",
+    "        word_score.clear()\n",
     "calculate_attention(q_vector,k_vector)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[[0.6069552302360535, 1.10406494140625, -0.8198787569999695],\n",
+       " [0.9363361597061157, 1.2333495616912842, -0.782888650894165],\n",
+       " [-1.505926489830017, -2.297654390335083, 1.7115082740783691]]"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "attention_scores"
    ]
   },
   {
@@ -273,7 +313,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
